# smoke_and_mirrors

./: .gitignore  CMakeLists.txt  README.md
src/: camera.cpp  camera.h  geometry.cpp  geometry.h  light.cpp  light.h  raytrace.cpp  raytrace.h  shade.cpp  shade.h  shadowTrace.cpp  shadowTrace.h  smoke_and_mirrors.cpp  smoke_and_mirrors.h  trace.cpp  trace.h  utility.cpp  utility.h
src/math/: geometry.cpp  geometry.h  plane.cpp  plane.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h  vector3.cpp  vector3.h
src/physics/: light.h  shade.cpp  shade.h  surface.h
src/utility/: camera.cpp  camera.h  scene.h  utility.cpp  utility.h
